Fix image paths in shop section
Updated image paths in the shop section to use the 'images/' directory.

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
         <div class="box box1">
             <div class="box-content">
                 <h2>Sofa Set</h2>
-                <div class="box-img" style="background-image: url('Sofa.jpg');"></div>
+                <div class="box-img" style="background-image: url('images/Sofa.jpg');"></div>
                 <p>See more</p>
             </div>
         </div>
@@ -102,7 +102,7 @@
         <div class="box box2">
             <div class="box-content">
                 <h2>Summer Essentials</h2>
-                <div class="box-img" style="background-image: url('box2.jpg');"></div>
+                <div class="box-img" style="background-image: url('images/box2.jpg');"></div>
                 <p>See more</p>
             </div>
         </div>
@@ -110,7 +110,7 @@
         <div class="box box3">
             <div class="box-content">
                 <h2>Clothing</h2>
-                <div class="box-img" style="background-image: url('box3.jpg');"></div>
+                <div class="box-img" style="background-image: url('images/box3.jpg');"></div>
                 <p>See more</p>
             </div>
         </div>
@@ -118,7 +118,7 @@
         <div class="box box4">
             <div class="box-content">
                 <h2>Furniture</h2>
-                <div class="box-img" style="background-image: url('box4.jpg');"></div>
+                <div class="box-img" style="background-image: url('images/box4.jpg');"></div>
                 <p>See more</p>
             </div>
         </div>
@@ -126,7 +126,7 @@
         <div class="box box5">
             <div class="box-content">
                 <h2>Kitchen</h2>
-                <div class="box-img" style="background-image: url('box5.jpg');"></div>
+                <div class="box-img" style="background-image: url('images/box5.jpg');"></div>
                 <p>See more</p>
             </div>
         </div>
@@ -134,7 +134,7 @@
         <div class="box box6">
             <div class="box-content">
                 <h2>Analog Watches</h2>
-                <div class="box-img" style="background-image: url('box6.jpg');"></div>
+                <div class="box-img" style="background-image: url('images/box6.jpg');"></div>
                 <p>See more</p>
             </div>
         </div>
@@ -142,7 +142,7 @@
         <div class="box box7">
             <div class="box-content">
                 <h2>Laptop Stands</h2>
-                <div class="box-img" style="background-image: url('box7.jpg');"></div>
+                <div class="box-img" style="background-image: url('images/box7.jpg');"></div>
                 <p>See more</p>
             </div>
         </div>
@@ -150,7 +150,7 @@
         <div class="box box8">
             <div class="box-content">
                 <h2>Home Decor</h2>
-                <div class="box-img" style="background-image: url('box8.jpg');"></div>
+                <div class="box-img" style="background-image: url('images/box8.jpg');"></div>
                 <p>See more</p>
             </div>
         </div>
@@ -216,3 +216,4 @@
 
 </body>
 </html>
+
