--- a/index.html
+++ b/index.html
@@ -42,13 +42,13 @@
         </div>
 
         <div class="nav-singin border">
-            <p><span>Hello, Sign in</span></p>
-            <p class="nav-second">Account & Orders</p>
+            <p><span>Hello, Guest</span></p>
+            <p class="nav-second">Demo Account</p>
         </div>
 
         <div class="nav-return border">
-            <p><span>Returns</span></p>
-            <p class="nav-second">& Orders</p>
+            <p><span>Demo</span></p>
+            <p class="nav-second">Orders</p>
         </div>
 
         <div class="nav-cart border">
@@ -87,6 +87,20 @@
             </p>
         </div>
     </div>
+    <div style="
+    background:#fff3cd;
+    color:#856404;
+    padding:10px;
+    text-align:center;
+    font-size:14px;
+    margin:10px auto;
+    width:90%;
+    border-radius:4px;
+    ">
+    ⚠️ This is a frontend-only demo project created for learning purposes.
+    No real accounts, payments, or data collection are involved.
+    </div>
+
 
     <!-- SHOP SECTION -->
     <div class="shop-section">
@@ -216,4 +230,5 @@
 
 </body>
 </html>
+
 
