--- a/index.html
+++ b/index.html
@@ -42,13 +42,13 @@
         </div>
 
         <div class="nav-singin border">
-            <p><span>Hello, Guest</span></p>
-            <p class="nav-second">Demo Account</p>
+            <p><span>Hello, Sign in</span></p>
+            <p class="nav-second">Account & Orders</p>
         </div>
 
         <div class="nav-return border">
-            <p><span>Demo</span></p>
-            <p class="nav-second">Orders</p>
+            <p><span>Returns</span></p>
+            <p class="nav-second">& Orders</p>
         </div>
 
         <div class="nav-cart border">
@@ -230,5 +230,6 @@
 
 </body>
 </html>
+
 
 
